vendor/structopt-0.3.21/tests/ui/flatten_and_parse.stderr
error: parse attribute is not allowed for flattened entry
  --> $DIR/flatten_and_parse.rs:22:26
   |
22 |     #[structopt(flatten, parse(from_occurrences))]
   |                          ^^^^^
